--- a/index.html
+++ b/index.html
@@ -6,18 +6,20 @@
   </head>
 
   <body>
-    <h1>Organizer</h1>
+    <h1>To do list</h1>
 
     <div id="organizer">
 
-
+      <form id="newItemForm">
+        <input type="text" id="itemField" placeholder="To do" />
+        <input type="date" id="itemField" placeholder="Date" />
+        <input type="submit" id="add" value="Add" />
+      </form>
+    <br />
     <ul>
       <li class="item">Get back to work</li>
+      <li class="date">20/01/1993</li>
     </ul>
-    <form id="newItemForm">
-      <input type="text" id="itemField" placeholder="Item" />
-      <input type="submit" id="add" value="add" />
-    </form>
 
     </div>
 
